--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <header>
-    <img src="./src/assets/images/image-omelette.jpeg" alt="Image de la recette">
+  <header class="background-image">
+    <!-- <img src="./src/assets/images/image-omelette.jpeg" alt="Image de la recette"> -->
   </header>
 
   <div class="container">
