--- a/index.html
+++ b/index.html
@@ -90,10 +90,13 @@
     </main>
   </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/stephanievanoverberghe">Stéphanie Vanoverberghe</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/stephanievanoverberghe">Stéphanie Vanoverberghe</a>.
+    </div>
+
+  </footer>
 </body>
 
 </html>
